# 2023_EMBEBIDOS_PROYECTO3

./: create-shared-lib-autotools.txt  create_server_service.txt  cross-compile-commands.txt  python_server_commands.txt  yocto_commands.txt
gstreamer_tutorial/: basic-tutorial-1
house_app/: pubspec.yaml
house_app/android/app/: build.gradle
house_app/ios/Runner/: Info.plist
house_app/ios/Runner.xcodeproj/: project.pbxproj
house_app/lib/: app.dart
house_app/lib/screens/: diagram.dart
house_app/lib/services/: house_service.dart
libfilter/: Makefile.in  aclocal.m4  configure  configure.ac
libfilter/autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
libfilter/include/: filter_lib.h
libfilter/lib/: Makefile.am  Makefile.in  filter_lib.c
libfilter/src/: Makefile.am  Makefile.in  prueba.c
libgpioman/: Makefile.in  configure  configure.ac
libgpioman/autom4te.cache/: output.0  requests  traces.0  traces.1
libgpioman/lib/: Makefile.in
libgpioman/src/: Makefile.in
libmygpio/: configure  configure.ac
libmygpio/autom4te.cache/: output.0  requests  traces.1
libmygpio/include/: gpio_rpi.h
libmygpio/lib/: Makefile.am  Makefile.in  gpio_rpi.c
libmygpio/src/: Makefile.am  Makefile.in  prueba.c
prueba-filter/: filters  filters.c  gst  gst.c
server/: app.py
server/config/: constants.py  server_config.py
server/controllers/: filters.py  webcam.py
server/libs/: gpioman.py  rpifilter.py  rpigpio.py
yocto/meta-gstreamer/: README
(+6 files in other folders)
