AC_INIT([libfilter], [1.0], [adrian.araya.420@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AM_PROG_AR
LT_INIT
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile lib/Makefile src/Makefile])
PKG_CHECK_MODULES([GSTREAMER], [gstreamer-1.0])
AC_SUBST(GSTREAMER_CFLAGS)
AC_SUBST(GSTREAMER_LIBS)
AC_MSG_NOTICE([GStreamer CFLAGS: $GSTREAMER_CFLAGS])
AC_MSG_NOTICE([GStreamer LIBS: $GSTREAMER_LIBS])
AC_OUTPUT
